Agregada la traducción de lab de suelos

--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -99,7 +99,7 @@
 
                     <div class="card card-desc card-servicio card-servicio">
                         <div class="card-body justify-content-center align-items-center">
-                            <h4 class="text-center fs-5">Cilindros de Concreto</h4>
+                            <h4 class="text-center fs-5" data-section="control-calidad-concreto" data-value="cilindros-concreto">Cilindros de Concreto</h4>
                             <p data-section="control-calidad-concreto" data-value="cilindros-concreto-desc"> Los
                                 cilindros de concreto nos permiten realizar pruebas de resistencia a la compresión.
                                 <br> <br>
