--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -149,27 +149,29 @@
                         <div class="card-body">
                             <h4 class="text-center fs-5" data-section="control-calidad-suelos"
                                 data-value="metodo-2-titulo">Prueba de Compactación con Densímetro Nuclear</h4>
-                            <div data-section="control-calidad-suelos" data-value="metodo-2-desc">
-                                <p> Medir la densidad in situ de un suelo y proporcionar información sobre la calidad de
+                            <div>
+                                <p data-section="control-calidad-suelos" data-value="metodo-2-resumen"> Medir la
+                                    densidad in situ de un suelo y proporcionar información sobre la calidad de
                                     la compactación.
 
 
                                 </p>
-                                <b>Procedimiento:</b> <br>
-                                <ol>
-                                    <li>Se coloca el densímetro nuclear sobre la superficie del suelo compactado.
+                                <div data-section="control-calidad-suelos" data-value="metodo-2-procedimiento">
+                                    <b>Procedimiento:</b>
+                                    <br>
+                                    <ol>
+                                        <li>Colocamos el densímetro nuclear sobre la superficie del suelo compactado.
+                                        </li>
+                                        <li>Este emite una fuente de radiación gamma hacia el suelo, midiendo la
+                                            radiación
+                                            dispersa, que está relacionada con la densidad del suelo.</li>
+                                        <li>Se repite el proceso en varios puntos para obtener datos representativos del
+                                            area.</li>
 
-                                    </li>
-                                    <li>Se emite una fuente de radiación gamma hacia el suelo.
-                                    </li>
-                                    <li>El densímetro mide la radiación dispersa, que está relacionada con la densidad
-                                        del suelo.
-                                    </li>
-                                    <li>Se repite el proceso en varios puntos para obtener datos representativos.
+                                    </ol>
+                                </div>
 
-                                    </li>
-                                </ol>
-                                <p>
+                                <p data-section="control-calidad-suelos" data-value="metodo-2-resultado">
                                     <b>Resultado:</b> Se obtienen lecturas directas de la densidad del suelo sin
                                     necesidad de extraer muestras.
 
@@ -177,7 +179,9 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
+                <p data-section="control-calidad-suelos" data-value="pie-pagina">Estas pruebas son fundamentales para garantizar que el suelo tenga la densidad adecuada y cumpla con los requisitos de capacidad de soporte para proyectos de construcción. La información recopilada ayuda a ajustar el contenido de humedad durante la compactación para lograr la máxima densidad y eficiencia. El uso conjunto de estos métodos proporciona una evaluación integral de la calidad de la compactación del suelo.</p>
             </div>
 
             <!--CONTACTANOS-->
