--- a/laboratorio-de-suelos.html
+++ b/laboratorio-de-suelos.html
@@ -116,8 +116,9 @@
                         <div class="card-body">
                             <p data-section="laboratorio-suelos" data-value="actividad-1-desc">Los laboratorios de
                                 suelos reciben muestras de suelos tomadas de sitios específicos, ya
-                                sea durante la exploración del subsuelo o como parte de proyectos de construcción. La
-                                preparación de estas muestras es una fase inicial crítica.
+                                sea durante la exploración del subsuelo o como parte de proyectos de construcción. El
+                                estudio de estas muestras es la fase inicial crítica de todo estudio.
+
                             </p>
                         </div>
                     </div>
@@ -131,10 +132,10 @@
                                 de Granulometría:</h3>
                         </div>
                         <div class="card-body">
-                            <p data-section="laboratorio-suelos" data-value="actividad-2-desc">Se determina la
-                                distribución de tamaños de partículas en una muestra de suelo. Esto
-                                es esencial para clasificar el suelo según sistemas de clasificación como el sistema
-                                de clasificación de suelos unificado (USCS).
+                            <p data-section="laboratorio-suelos" data-value="actividad-2-desc">Con esta prueba
+                                determinamos la distribución de tamaños de partículas en una muestra de suelo. Esto es
+                                esencial para clasificar el suelo según el sistema de clasificación de suelos unificado
+                                (USCS).
 
 
                             </p>
@@ -149,10 +150,11 @@
                                 de Atterberg:</h3>
                         </div>
                         <div class="card-body">
-                            <p data-section="laboratorio-suelos" data-value="actividad-3-desc">Se realizan pruebas para
-                                determinar los límites de plasticidad y límites de liquidez
-                                del suelo. Estos límites son importantes para comprender el comportamiento del suelo
-                                bajo diferentes condiciones de humedad.
+                            <p data-section="laboratorio-suelos" data-value="actividad-3-desc">Conducimos esta prueba
+                                para determinar los límites de plasticidad y límites de liquidez del suelo. Estos
+                                límites son importantes para comprender el comportamiento del suelo bajo diferentes
+                                condiciones de humedad.
+
                             </p>
                         </div>
                     </div>
@@ -167,7 +169,7 @@
                                 de Compactación:</h3>
                         </div>
                         <div class="card-body">
-                            <p data-section="laboratorio-suelos" data-value="actividad-4-desc">Se llevan a cabo pruebas
+                            <p data-section="laboratorio-suelos" data-value="actividad-4-desc">Llevamos a cabo pruebas
                                 de compactación para evaluar la densidad máxima y la humedad
                                 óptima del suelo bajo condiciones específicas de compactación. Esto es esencial para el
                                 diseño de terraplenes y cimentaciones.
@@ -184,7 +186,8 @@
                                 de Corte Directo y Triaxiales:</h3>
                         </div>
                         <div class="card-body">
-                            <p data-section="laboratorio-suelos" data-value="actividad-5-desc">Se realizan pruebas para
+                            <p data-section="laboratorio-suelos" data-value="actividad-5-desc">Realizamos estas pruebas
+                                para
                                 evaluar la resistencia al corte del suelo en diferentes
                                 condiciones de esfuerzo. Esto es crucial para el diseño de estructuras de retención,
                                 muros de contención y otros elementos geotécnicos.
@@ -202,8 +205,9 @@
                                 de Consolidación:</h3>
                         </div>
                         <div class="card-body">
-                            <p>Se realizan pruebas de consolidación para evaluar la compresibilidad y la capacidad
-                                de asentamiento del suelo. Esto es vital para proyectos en los que se espera
+                            <p data-section="laboratorio-suelos" data-value="actividad-6-desc">Efectuamos pruebas de
+                                consolidación para evaluar la compresibilidad y la capacidad de
+                                asentamiento del suelo. Esto es vital para proyectos en los que se espera un
                                 asentamiento significativo.
                             </p>
                         </div>
@@ -214,12 +218,14 @@
 
                     <div class="card card-desc card-servicio">
                         <div class="card-header">
-                            <h3 class="fs-5">Densidad del suelo In Situ:</h3>
+                            <h3 class="fs-5" data-section="laboratorio-suelos" data-value="actividad-7-titulo">Densidad
+                                del suelo In Situ:</h3>
                         </div>
                         <div class="card-body">
-                            <p>Se utilizan dispositivos como el densímetro nuclear para medir la densidad del suelo
-                                in situ. Estas pruebas proporcionan información sobre la compactación del suelo
-                                durante la construcción.
+                            <p data-section="laboratorio-suelos" data-value="actividad-7-desc">Se utilizan dispositivos
+                                como el densímetro nuclear para medir la densidad del suelo in situ. Esta prueba nos
+                                proporciona información sobre la compactación del suelo durante la construcción.
+
                             </p>
                         </div>
 
@@ -228,40 +234,49 @@
             </div>
             <hr>
             <div class="row">
-                <h4 class="text-center">Ensayos Especiales:</h4>
+                <h4 class="text-center" data-section="laboratorio-suelos" data-value="test-especiales-titulo">Ensayos Especiales:</h4>
                 <div class="col-md descripcion-servicio">
-                    <p>Dependiendo de la naturaleza del proyecto, pueden llevarse a cabo ensayos especiales para abordar
+                    <p data-section="laboratorio-suelos" data-value="tests-especiales-resumen"> Dependiendo de la naturaleza del proyecto, pueden llevarse a cabo ensayos especiales para abordar
                         características particulares del suelo, como pruebas de permeabilidad, pruebas de expansión,
                         entre otras.
                     </p>
-                    <div class="d-flex" style="height: fit-content; ">
-                        <div class="vr" style="margin-right: 3% !important;"></div>
-                        <div>
-                            <p>
-                                Proctor modificado.<br>
-                                Proctor estándar.<br>
-                                Ensayo de CBR.<br>
-                                Equivalente de arena.<br>
-                                Compresión simple, densidad y humedad.<br>
-                                Corte directo.<br>
-                                Peso específico y absorción, agregado grueso.<br>
-                                Peso específico y absorción, agregado fino.<br>
-                                Porcentajes de vacíos en los agregados.<br>
-                                Abrasión en la máquina de los Ángeles.<br>
-                                Diseño de morteros.<br>
-                                Diseño de mezclas de concreto.<br>
-                                Extracción núcleos de concreto y asfalto con extractor de broca de diamante.<br>
-                                Densidad y absorción del concreto endurecido.<br>
-                                Resistencia a la compresión de bloques y adoquines.
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="d-flex" style="height: fit-content; ">
+                                <div class="vr" style="margin-right: 3% !important;"></div>
+                                <div>
+                                    <p data-section="laboratorio-suelos" data-value="test-especiales-pt1">
+                                        Proctor modificado.<br>
+                                        Proctor estándar.<br>
+                                        Ensayo de CBR.<br>
+                                        Equivalente de arena.<br>
+                                        Compresión simple, densidad y humedad.<br>
+                                        Corte directo.<br>
+                                        Peso específico y absorción, agregado grueso.<br>
+                                        Peso específico y absorción, agregado fino.<br>
 
-                            </p>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md">
+                            <div class="d-flex" style="height: fit-content; ">
+                                <div class="vr" style="margin-right: 3% !important;"></div>
+                                <div>
+                                    <p data-section="laboratorio-suelos" data-value="test-especiales-pt2">
+                                        Porcentajes de vacíos en los agregados.<br>
+                                        Abrasión en la máquina de los Ángeles.<br>
+                                        Diseño de morteros.<br>
+                                        Diseño de mezclas de concreto.<br>
+                                        Extracción núcleos de concreto y asfalto con extractor de broca de diamante.<br>
+                                        Densidad y absorción del concreto endurecido.<br>
+                                        Resistencia a la compresión de bloques y adoquines.
+
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <p>
-                        Los laboratorios de suelos desempeñan un papel crítico en la evaluación de la idoneidad del
-                        suelo para diversos proyectos de construcción y en la toma de decisiones fundamentales para
-                        garantizar la seguridad y eficiencia de las estructuras.
-                    </p>
 
                 </div>
             </div>
