Modificado contacto y CCConcreto

--- a/contacto.html
+++ b/contacto.html
@@ -132,7 +132,8 @@
 
                 <div class="col-md text-center fs-4 descripcion-servicio ">
                     <div class="col-md">
-                        <h4 data-section="datos-contacto" data-value="ubi">Nuestra ubicación</h4>
+                        <img src="img/icons/location_icon.png" class="d-inline"  style="width:2.5rem !important; height:2.5rem !important;" alt="">
+                        <h4 class="d-inline" data-section="datos-contacto" data-value="ubi">Nuestra ubicación</h4>
                     </div>
                     <div class="col-md embed-container">
                         <iframe
