--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -119,7 +119,7 @@
                                 data-value="viguetas-concreto">Viguetas de Concreto</h4>
                             <p data-section="control-calidad-concreto" data-value="viguetas-concreto-desc">
                                 Las viguetas se utilizan para evaluar la resistencia a flexión y otras propiedades del
-                                concreto. <br><br> <b>Procedimiento:</b> Las viguetas se moldean y se someten a pruebas
+                                concreto. <br><br> <b>Procedimiento:</b><br> Las viguetas se moldean y se someten a pruebas
                                 para medir su capacidad para resistir cargas flexionales y evaluar la calidad y
                                 durabilidad del concreto.
 
@@ -175,7 +175,7 @@
                                 La extracción de núcleos la utilizamos para obtener muestras del concreto en estructuras
                                 existentes y evaluar su resistencia y condiciones internas.
                                 <br><br>
-                                <b>Procedimiento:</b>Se perfora un núcleo del concreto utilizando una herramienta
+                                <b>Procedimiento:</b><br>Se perfora un núcleo del concreto utilizando una herramienta
                                 especial, y la muestra
                                 resultante se utiliza para realizar pruebas de resistencia a la compresión y analizar la
                                 calidad y condiciones internas del concreto.
