Links agregados al footer

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
                                 data-section="footer" data-value="sabado">Sábados:</a> 7:00 AM - 12:00 MD</li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
-                                data-section="footer" data-value="horario-domingo">Domingos: </a></li>
+                                data-section="footer" data-value="horario-domingo">Domingos: <b>CERRADO</b></a> </li>
                     </ul>
                 </div>
 
@@ -378,7 +378,7 @@
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="https://www.linkedin.com/company/geonicsa/about/?viewAsMember=true">
+                                href="https://www.linkedin.com/company/geonicsa/about/?viewAsMember=true" target="_blank">
                                 <img class="d-inline" src="./img/icons/linkedin_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
                                 <p class="d-inline">LinkedIn</p>
@@ -386,7 +386,7 @@
                         </li>
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="#">
+                                href="https://www.facebook.com/profile.php?id=61557121580415&mibextid=ZbWKwL" target="_blank">
                                 <img class="d-inline" src="./img/icons/facebook_icon.png"
                                     style="width:2rem !important; height: 2rem !important;">
                                 <p class="d-inline">Facebook</p>
