--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sobre nosotros</title>
+    <title>Sobre nosotros | GEONICSA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="static/styles.css" rel="stylesheet">
@@ -44,8 +44,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
-                                    data-value="servicio1">Estudios de
-                                    suelos</a></li>
+                                    data-value="servicio1">Estudios geotécnicos</a></li>
                             <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
                                     data-value="servicio2">Control de
                                     calidad de materiales</a></li>
