Agregadas las modificaciones de las imágenes

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -110,7 +110,7 @@
 
 
                 <div class="col-md justify-content-center">
-                    <img src="./img/banner_inicio.jpg" style="margin-top: 3vh !important;" class="img-fluid mx-auto d-block" alt="..." loading="lazy">
+                    <img src="./img/sobre-nosotros2.jpg" style="margin-top: 3vh !important; margin-bottom: 3vh !important; width:100%; height:50vh !important; object-fit:cover;" class="img-fluid mx-auto d-block" alt="..." loading="lazy">
                 </div>
             </div>
             <hr>
