Modificaciones a la distribución de trabajos anteriores

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -110,13 +110,16 @@
 
 
                 <div class="col-md justify-content-center">
-                    <img src="./img/sobre-nosotros2.jpg" style="margin-top: 3vh !important; margin-bottom: 3vh !important; width:100%; height:50vh !important; object-fit:cover;" class="img-fluid mx-auto d-block" alt="..." loading="lazy">
+                    <img src="./img/sobre-nosotros2.jpg"
+                        style="margin-top: 3vh !important; margin-bottom: 3vh !important; width:100%; height:50vh !important; object-fit:cover;"
+                        class="img-fluid mx-auto d-block" alt="..." loading="lazy">
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-md descripcion-servicio">
-                    <h3 data-section="nosotros" data-value="nombre-fundador">Nuestro fundador: Msc. Ing. Oscar Osvaldo Jirón Boza </h3>
+                    <h3 data-section="nosotros" data-value="nombre-fundador">Nuestro fundador: Msc. Ing. Oscar Osvaldo
+                        Jirón Boza </h3>
                     <p class="lh-base" data-section="nosotros" data-value="info-fundador">
                         En 1972 inició sus estudios de
                         ingeniería civil en la UNAN Managua, su primer trabajo fue en el MOP (Ministerio de Obras
@@ -147,80 +150,134 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-5 descripcion-servicio">
-                    <img src="./img/sobre-nosotros3.jpg" class="imagen-servicio justify-content-center" alt="">
-                </div>
                 <div class="col-md descripcion-servicio">
-                    <p data-section="nosotros" data-value="resumen-proyectos"> <strong>GEONIC</strong>  mantiene relaciones directas con entes privados, instituciones del estado, e intercambios de servicios con firmas consultoras y constructoras nacionales e internacionales, mencionando algunas de ellas y trabajos realizados, a continuación:
+                    <p data-section="nosotros" data-value="resumen-proyectos"> <strong>GEONIC</strong> mantiene
+                        relaciones directas con entes privados, instituciones del estado, e intercambios de servicios
+                        con firmas consultoras y constructoras nacionales e internacionales, mencionando algunas de
+                        ellas y trabajos realizados, a continuación:
                     </p>
-                    <div class="d-flex" style="height: fit-content;">
-                        <div class="vr"></div>
-                        <div>
-                            <ul>
-                                <li data-section="nosotros" data-value="roughton">
-                                    <b>ROUGHTON</b>: Estudios geotécnicos de Carreteras y Puentes en Costa Rica,
-                                    incluyendo
-                                    la instalación de un
-                                    Laboratorio de Suelos. Carretera Malpaisillo-Villa 15 de Julio.
-                                </li>
-                                <li data-section="nosotros" data-value="edico">
-                                    <b>EDICO</b>:  Estudio geotécnico de la carretera tramo Río Blanco – Mulukuku.
-                                </li>
-                                <li data-section="nosotros" data-value="tec">
-                                    <b>TEC</b>: Estudio geotécnico de carretera y puentes del tramo Pantasma - Wiwilí. Estudio geotécnico de la carretera de circunvalación de Masaya.
-
-                                </li>
-                                <li data-section="nosotros" data-value="eaai">
-                                    <b>EAAI</b>: Estudio de suelos para la ampliación en 800 metros de pista del aeropuerto Augusto Cesar Sandino en Managua
-                                </li>
-                                <li >
-                                    <b>INABENSA:</b>
-                                    <ul >
-                                        <li data-section="nosotros" data-value="inabensa-1">Estudio de cimentación del interconectado eléctrico SIEPAC desde Peñas Blancas al Guasaule.</li>
-                                        <li data-section="nosotros" data-value="inabensa-2">En Guatemala, estudio de cimentación del tramo Chiquimula, Zacapa y Santa Rosa, incluyendo la instalación de un laboratorio de Suelos.</li>
-                                    </ul>
-                                </li>
-                                <li data-section="nosotros" data-value="cemex">
-                                    <b>CEMEX</b>: Estudio geotécnico de la fábrica de clinker para cemento ubicado en la refinería, Managua.
-
-                                </li>
-                                <li data-section="nosotros" data-value="alma">
-                                    <b>ALMA</b>: Estudio geotécnico y pavimento en numerosas calles y cauces de Managua.
-                                </li>
-                                <li data-section="nosotros" data-value="icc">
-                                    <b>ICC</b>: Estudio Geotécnico presa Hidropantasma. Estudio Geotécnico Presa Tumarín.
-                                </li>
-                                <li data-section="nosotros" data-value="alba">
-                                    <b>ALBA</b>: Estudio geotécnico de generación de energía eólica planta La Fe, Rivas (22 torres). Estudio geotécnico proyecto planta Los Brasiles.
-                                </li>
-                                <li>
-                                    <b>CONINCASA</b>: 
-                                    <ul> 
-                                        <li data-section="nosotros" data-value="conincasa-1">Estudio geotécnico ampliación del Puerto de Corinto.</li>
-                                        <li data-section="nosotros" data-value="conincasa-2"> Estudio de suelos y pavimento de caminos a las presas Carlos Fonseca y presa Larreynaga.</li>
-                                        <li data-section="nosotros" data-value="conincasa-3">Estudio geotécnico de la pista del aeropuerto de Corn Island y pista aeropuerto de Bluefields, pista aeropuerto Los Brasiles, pista aeropuerto Punta Huete.</li>
-                                        <li data-section="nosotros" data-value="conincasa-4">Estudio Geotécnico y Pavimento de calles de rodajes y estacionamientos en el aeropuerto Augusto Cesar Sandino en Managua.</li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <b>MECO</b>: 
+                    <br>
+                    <div class="row">
+                        <div class="col">
+                            <div class="d-flex" style="height: fit-content;">
+                                <div class="vr"></div>
+                                <div>
                                     <ul>
-                                        <li data-section="nosotros" data-value="meco-1">Estudio geotécnico puente el Bopal sobre el río grande de Matagalpa.</li>
-                                        <li data-section="nosotros" data-value="meco-2">Estudio geotécnico puente paso a desnivel La Robelo. </li>
-                                        <li data-section="nosotros" data-value="meco-3">Estudio geotécnico ampliación del cauce oriental en Managua.</li>
+                                        <li data-section="nosotros" data-value="roughton">
+                                            <b>ROUGHTON</b>: Estudios geotécnicos de Carreteras y Puentes en Costa Rica,
+                                            incluyendo
+                                            la instalación de un
+                                            Laboratorio de Suelos. Carretera Malpaisillo-Villa 15 de Julio.
+                                        </li>
+                                        <li data-section="nosotros" data-value="edico">
+                                            <b>EDICO</b>: Estudio geotécnico de la carretera tramo Río Blanco –
+                                            Mulukuku.
+                                        </li>
+                                        <li data-section="nosotros" data-value="tec">
+                                            <b>TEC</b>: Estudio geotécnico de carretera y puentes del tramo Pantasma -
+                                            Wiwilí. Estudio geotécnico de la carretera de circunvalación de Masaya.
+
+                                        </li>
+                                        <li data-section="nosotros" data-value="eaai">
+                                            <b>EAAI</b>: Estudio de suelos para la ampliación en 800 metros de pista del
+                                            aeropuerto Augusto Cesar Sandino en Managua
+                                        </li>
+                                        <li>
+                                            <b>INABENSA:</b>
+                                            <ul>
+                                                <li data-section="nosotros" data-value="inabensa-1">Estudio de
+                                                    cimentación del interconectado eléctrico SIEPAC desde Peñas Blancas
+                                                    al Guasaule.</li>
+                                                <li data-section="nosotros" data-value="inabensa-2">En Guatemala,
+                                                    estudio de cimentación del tramo Chiquimula, Zacapa y Santa Rosa,
+                                                    incluyendo la instalación de un laboratorio de Suelos.</li>
+                                            </ul>
+                                        </li>
+                                        <li data-section="nosotros" data-value="cemex">
+                                            <b>CEMEX</b>: Estudio geotécnico de la fábrica de clinker para cemento
+                                            ubicado en la refinería, Managua.
+
+                                        </li>
+                                        <li data-section="nosotros" data-value="alma">
+                                            <b>ALMA</b>: Estudio geotécnico y pavimento en numerosas calles y cauces de
+                                            Managua.
+                                        </li>
+                                        <li data-section="nosotros" data-value="icc">
+                                            <b>ICC</b>: Estudio Geotécnico presa Hidropantasma. Estudio Geotécnico Presa
+                                            Tumarín.
+                                        </li>
+                                        <li data-section="nosotros" data-value="alba">
+                                            <b>ALBA</b>: Estudio geotécnico de generación de energía eólica planta La
+                                            Fe, Rivas (22 torres). Estudio geotécnico proyecto planta Los Brasiles.
+                                        </li>
                                     </ul>
-                                </li>
-                                <li >
-                                    <b>VACSA</b>: 
-                                    <ul>
-                                        <li data-section="nosotros" data-value="vacsa-1">Estudio geotécnico del CEDIS ubicado en el km 13 carretera vieja a León.</li>
-                                        <li data-section="nosotros" data-value="vacsa-2">Estudio geotécnico de varias plantas industriales en zona franca Saratoga.</li>
-                                        <li data-section="nosotros" data-value="vacsa-3">Estudio geotécnico del puesto fronterizo en San Pancho frontera con Costa Rica.</li>
-                                        <li data-section="nosotros" data-value="vacsa-4"> Estudio geotécnico de chequeo de relleno de oficinas centrales de Grupo Q, sobre la pista Jean Paul Genie.</li>
-                                    </ul>
-                                </li>
-                            </ul>
+                                </div>
+                            </div>
                         </div>
+                        <div class="col">
+                            <div class="d-flex" style="height: fit-content;">
+                                <div class="vr"></div>
+                                <div>
+                                    <ul>
+                                        <li>
+                                            <b>CONINCASA</b>:
+                                            <ul>
+                                                <li data-section="nosotros" data-value="conincasa-1">Estudio geotécnico
+                                                    ampliación del
+                                                    Puerto de Corinto.</li>
+                                                <li data-section="nosotros" data-value="conincasa-2"> Estudio de suelos
+                                                    y pavimento de
+                                                    caminos a las presas Carlos Fonseca y presa Larreynaga.</li>
+                                                <li data-section="nosotros" data-value="conincasa-3">Estudio geotécnico
+                                                    de la pista del
+                                                    aeropuerto de Corn Island y pista aeropuerto de Bluefields, pista
+                                                    aeropuerto Los
+                                                    Brasiles, pista aeropuerto Punta Huete.</li>
+                                                <li data-section="nosotros" data-value="conincasa-4">Estudio Geotécnico
+                                                    y Pavimento de
+                                                    calles de rodajes y estacionamientos en el aeropuerto Augusto Cesar
+                                                    Sandino en Managua.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <b>MECO</b>:
+                                            <ul>
+                                                <li data-section="nosotros" data-value="meco-1">Estudio geotécnico
+                                                    puente el Bopal sobre el
+                                                    río grande de Matagalpa.</li>
+                                                <li data-section="nosotros" data-value="meco-2">Estudio geotécnico
+                                                    puente paso a desnivel La
+                                                    Robelo. </li>
+                                                <li data-section="nosotros" data-value="meco-3">Estudio geotécnico
+                                                    ampliación del cauce
+                                                    oriental en Managua.</li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <b>VACSA</b>:
+                                            <ul>
+                                                <li data-section="nosotros" data-value="vacsa-1">Estudio geotécnico del
+                                                    CEDIS ubicado en el
+                                                    km 13 carretera vieja a León.</li>
+                                                <li data-section="nosotros" data-value="vacsa-2">Estudio geotécnico de
+                                                    varias plantas
+                                                    industriales en zona franca Saratoga.</li>
+                                                <li data-section="nosotros" data-value="vacsa-3">Estudio geotécnico del
+                                                    puesto fronterizo en
+                                                    San Pancho frontera con Costa Rica.</li>
+                                                <li data-section="nosotros" data-value="vacsa-4"> Estudio geotécnico de
+                                                    chequeo de relleno
+                                                    de oficinas centrales de Grupo Q, sobre la pista Jean Paul Genie.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
